--- a/report-all.html
+++ b/report-all.html
@@ -211,14 +211,10 @@
                             <th class="text-center">#</th>
                             <th>รุ่น</th>
                             <th>ชื่อทีม</th>
-                            <th>สมาชิก</th>
                             <th>ที่ปรึกษา</th>
-                            <th>อีเมล์</th>
-                            <th>หลักฐาน</th>
-                            <th>จัดการ</th>
                         </tr>
                         </thead>
-                        <tbody id="dataTable">
+                        <tbody id="reportTable">
                         <!-- Data will be injected here -->
                         </tbody>
                     </table>
@@ -310,7 +306,7 @@
     </div>
 </div>
 
-<script src="assets/js/loadTable.js"></script>
+<script src="assets/js/loadReportTable.js"></script>
 <!--   Core JS Files   -->
 <script src="assets/js/core/popper.min.js" type="text/javascript"></script>
 <script src="assets/js/core/bootstrap.min.js" type="text/javascript"></script>
