--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
                                                     <a href="assets/docs/agenda_20CTF.pdf" class="dropdown-item border-radius-md">
                                                         <span class="ps-3">กำหนดการ</span>
                                                     </a>
-                                                    <a href="register.html" class="dropdown-item border-radius-md">
-                                                        <span class="ps-3">ลงทะเบียน</span>
-                                                    </a>
+                                                    <!--                                                    <a href="register.html" class="dropdown-item border-radius-md">-->
+                                                    <!--                                                        <span class="ps-3">ลงทะเบียน</span>-->
+                                                    <!--                                                    </a>-->
 
                                                     <div class="dropdown-header text-dark font-weight-bolder d-flex align-items-center px-0 mt-3">
                                                         <div class="d-inline-block">
@@ -126,8 +126,45 @@
                                                     <a href="assets/docs/robotic-schedule.pdf" class="dropdown-item border-radius-md" target="_blank">
                                                         <span class="ps-3">กำหนดการ</span>
                                                     </a>
-                                                    <a href="https://docs.google.com/forms/d/1IZoqa1MZ12yhakZ1aSfoD3XP_Cd3VqmfgG7rpqd5g_o/viewform" class="dropdown-item border-radius-md">
-                                                        <span class="ps-3">ลงทะเบียน</span>
+                                                    <!--                                                    <a href="https://docs.google.com/forms/d/1IZoqa1MZ12yhakZ1aSfoD3XP_Cd3VqmfgG7rpqd5g_o/viewform" class="dropdown-item border-radius-md">-->
+                                                    <!--                                                        <span class="ps-3">ลงทะเบียน</span>-->
+                                                    <!--                                                    </a>-->
+                                                    <hr class="vertical dark">
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </li>
+                            <li class="nav-item dropdown dropdown-hover mx-2">
+                                <a role="button" class="nav-link ps-2 d-flex justify-content-between text-sm cursor-pointer align-items-center" id="dropdownMenuPages" data-bs-toggle="dropdown"
+                                   aria-expanded="false">
+                                    ประกาศรายชื่อ
+                                    <img src="assets/img/down-arrow-dark.svg" alt="down-arrow" class="arrow ms-1">
+                                </a>
+                                <div class="dropdown-menu dropdown-menu-animation dropdown-xl p-3 border-radius-xl mt-0 mt-lg-3" aria-labelledby="dropdownMenuPages">
+                                    <div class="row d-none d-lg-block">
+                                        <div class="col-12 px-4 py-2">
+                                            <div class="row">
+                                                <div class="col-12 position-relative">
+                                                    <div class="ms-3 dropdown-header text-dark font-weight-bolder d-flex justify-content-cente align-items-center px-0">
+                                                        IT RERU Cyber Hackathon 2025
+                                                    </div>
+                                                    <a href="report-all.html?level=junior" class="dropdown-item border-radius-md">
+                                                        <span class="ps-3">Junior Level</span>
+                                                    </a>
+                                                    <a href="report-all.html?level=senior" class="dropdown-item border-radius-md">
+                                                        <span class="ps-3">Senior Level</span>
+                                                    </a>
+                                                    <a href="report-all.html?level=open" class="dropdown-item border-radius-md">
+                                                        <span class="ps-3">Open Level</span>
+                                                    </a>
+
+                                                    <div class="d-none dropdown-header text-dark font-weight-bolder d-flex align-items-center px-0 mt-3">
+                                                        IT RERU Robotic Youth League 2025
+                                                    </div>
+                                                    <a href="report-robotic.html" class="d-none dropdown-item border-radius-md" target="_blank">
+                                                        <span class="ps-3">รายชื่อทีม</span>
                                                     </a>
                                                     <hr class="vertical dark">
                                                 </div>
@@ -168,6 +205,10 @@
                         </p>
                         <div class="buttons">
                             <a href="privacy.html" class="btn btn-rounded btn-outline-secondary mt-2 mb-0">อ่านรายละเอียด</a>
+                            <br>
+                            <a href="report-all.html?level=junior" class="btn btn-rounded btn-outline-success mt-2 mb-0">รายชื่อทีม Junior Level</a>
+                            <a href="report-all.html?level=senior" class="btn btn-rounded btn-outline-success mt-2 mb-0">รายชื่อทีม Senior Level</a>
+                            <a href="report-all.html?level=open" class="btn btn-rounded btn-outline-success mt-2 mb-0">รายชื่อทีม Open Level</a>
                         </div>
                     </div>
                 </div>
